removed redundant files for release, see changelog.txt for details

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Asymmetric Student t-distributions
 Version: 0.3.0
 Author: Zhiye Xia
 Maintainer: Zhiye Xia <dansummer94@gmail.com>
-Description: This package is is a collection of methods and applications for AST and GAT distributions.
+Description: This package is is a collection of methods and applications for AST distributions.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
