--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,12 +10,14 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/dan9401/st
 BugReports: https://github.com/dan9401/st/issues
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.1
+Depends: R (>= 2.10)
 Suggests: 
     testthat (>= 2.1.0),
     knitr,
     rmarkdown
 Imports: 
     nloptr,
-    Rsolnp
+    Rsolnp,
+    DistributionUtils
 VignetteBuilder: knitr
